--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
   "icons": [
 
     {
-      "src": "Screenshot_20250325-090314~2 (1).png",
+      "src": "Screenshot_20250325-130737~2.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "Screenshot_20250325-090314~2 (1).png",
+      "src": "Screenshot_20250325-130737~2.png",
       "sizes": "192x192",
       "type": "image/png"
     }
